alterações de fonte e baixar curriculo comentado

--- a/leo.css
+++ b/leo.css
@@ -23,6 +23,7 @@
     background-color: #2b2929;
     color: #ffffff;
     position: relative;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 a{
