--- a/guilherme.css
+++ b/guilherme.css
@@ -12,6 +12,7 @@
     margin-right: -25%;
     margin-left: -44%;
     transform: translate(-50%, -50%);
+    
 }
 .botaoinicio:hover{
     background: #7d7c80;
@@ -20,9 +21,11 @@
 }
 
 .body{
+    
     background-color: #1d1b1b;
     color: #ffffff;
-    position: relative;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
 
 a{
@@ -32,3 +35,5 @@ a{
 .voltar{
     color: #000000;
 }
+
+
