--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* Estilos para o lado direito da tela */
@@ -21,6 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* Estilos para os links */
@@ -40,15 +42,16 @@ a:hover {
 }
 
 .titulo{
-    font-family: sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #ffffff;
 }
 
 .frase{
-    font-family: sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #ffffff;
 }
 
 .body{
     background-color: #3b3d3f;
+    
 }
